# conta-tools-nfse

./: .gitignore  CLAUDE.md  CONTEXT.md  debug_envio2.xml  debug_xml2.py  empresa_exemplo.conf  example.conf  fetch_wsdl.py  pyproject.toml  soap_request_RecepcionarLoteRpsSincrono.xml  soap_response_RecepcionarLoteRpsSincrono.xml  test_emit.py  test_emit2.py  wsdl_campinas.xml
docs/: DRIVERS.md  REFORMA-TRIBUTARIA-IBS-CBS.md
examples/: edm_teste_campinas.xlsx  edm_teste_campinas_resultado.xlsx  edm_teste_resultado_v2.xlsx  template_nfse_campinas.xlsx  template_nfse_sp.xlsx
src/conta_tools_nfse/: __main__.py  chat.py  conf.py
src/conta_tools_nfse/api/: app.py  conf.py  pessoas_fisicas.py  templates.py
src/conta_tools_nfse/api/static/: index.html  pessoas-fisicas.html  templates.html
src/conta_tools_nfse/cli/: campinas.py  sao_paulo.py
src/conta_tools_nfse/drivers/: base.py  campinas.py  sao_paulo.py
src/conta_tools_nfse/excel/: columns.py  reader.py  template.py
src/conta_tools_nfse/mcp/: conf.py  server.py
tests/: test_excel_reader.py
tests/integration/: teste_agente_mcp.py
